[package]
name = "wagashi"
version = "0.0.0"
edition = "2021"
authors = ["Richard Anaya"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardanaya/wagashi"
readme="README.md"
description = "Wagashi terminal chart rendering library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kimono = "0.1.3"
